# aggkit-rust

./: .gitignore  Cargo.toml  README.md
abi/: BridgeL2SovereignChain.json  GlobalExitRootManagerL2SovereignChain.json  PolygonRollupManager.json  PolygonZkEVMGlobalExitRootL2.json  PolygonZkEVMGlobalExitRootV2.json
src/: api.rs  cli.rs  contracts.rs  indexer.rs  indexer_bridge.rs  indexer_l1infotree.rs  indexer_rollupmanager.rs  leaf_bridge.rs  leaf_l1infotree.rs  lib.rs  main.rs  merkle_tree.rs
tests/: leaf_bridge.rs  leaf_l1infotree.rs  merkle_tree.rs
