[package]
name = "aggkit-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: think if i need everything
alloy = { version = "1.0.9", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace"
] }

rocksdb = "0.23.0"
bincode = "2.0.1"

# async
futures-util = "0.3"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "full", "signal"] }

futures = "0.3"
# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
alloy-sol-types = "0.8.22"

# is this dep ok?
async-trait = "0.1.88"

clap = { version = "4.0", features = ["derive"] }

axum = "0.8.4"